data/derived/comb/progs/unify/prog7575.ml.out
Characters 189-201:
  if value > 9 then (1,value-10)
                    ^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type (int * int) list
